--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@
  letter-spacing: 4px;
 }
 
+/*Header in main*/
 .title-header {
   display: flex;
   font-weight: bold;
@@ -32,6 +33,21 @@
   background-color: #5f3f54;
   height: 8vh;
   width: 100%;
+  border: 1px solid black;
+}
+
+.title-name {
+  flex: 8;
+}
+
+.addbutton {
+  flex: 2;
+  width: 20%;
+  height: 8vh;
+  background-color: #3d2936;
+  color: white;
+  font-size: 15px;
+  text-transform: uppercase;
   border: 1px solid black;
 }
 
@@ -130,7 +146,7 @@
 .insert {
   width: 100%;
   height: auto;
-  display: flex;
+  display: none;
   flex-grow: column;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -154,4 +170,8 @@
   padding-left: 5px;
   flex: 1 20px;
   min-width: 100%;
+}
+
+.show {
+  display: flex;
 }
