--- a/style.css
+++ b/style.css
@@ -51,6 +51,10 @@
   border: 1px solid black;
 }
 
+.addbutton:hover {
+  color: black;
+}
+
 .nav-elements {
   display: flex;
   justify-content: space-around;
