--- a/style.css
+++ b/style.css
@@ -4,21 +4,27 @@
   padding: 0px;
 }
 .header {
-  font-family: 'Quicksand', sans-serif;
+  /* font-family: 'Quicksand', sans-serif;
   display: flex;
   align-items: center;
   justify-content: space-around;
-  min-height: 10vh;
-  background-color: #5f3f54;
+  min-height: 10vh; */
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+  /* background-color: red; */
   cursor: pointer;
 }
 
-.title {
+/* .title {
  font-weight: bold;
  font-size: 30px;
  text-transform: uppercase;
  letter-spacing: 4px;
-}
+ background-color: red;
+} */
 
 /*Header in main*/
 .title-header {
@@ -61,14 +67,56 @@
   width: 40%;
   font-size: 15px;
   color: white;
+  float: right;
+
 }
 
-.nav-elements a {
-   color: white;
-   text-decoration: none;
-   letter-spacing: 3px;
-   text-align: center;
+/* .nav-elements a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+   
+} */
+
+body {
+margin: 0;
+font-family: Arial, Helvetica, sans-serif;
 }
+
+.topnav {
+overflow: hidden;
+background-color: #333;
+}
+
+.topnav a {
+float: left;
+color: #f2f2f2;
+text-align: center;
+padding: 14px 22px;
+text-decoration: none;
+font-size: 17px;
+}
+
+.topnav a:hover {
+background-color: #ddd;
+color: black;
+}
+
+.topnav a.active {
+background-color: rgb(56, 80, 100);
+color: white;
+}
+
+.topnav-right {
+padding-top: 5px;
+padding-right: 20px;
+margin-right: 20px;
+float: right;
+}
+
+/* 
 
 .nav-elements li {
   list-style: none;
@@ -76,12 +124,13 @@
 
 .nav-elements li a {
   transition: all 0.3s ease 0s;
+  
 }
 
 /* Text becomes colored after hovering over nav items */
-.nav-elements li a:hover {
+/* .nav-elements li a:hover {
   color: #0088a9;
-}
+}  */
 
 /* Dimensions for search in stations */
 #search-container {
