Added Stations Route

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,17 +15,18 @@
       </div>
       <ul class="nav-elements">
         <li>
-          <a href="home.html">Home</a>
+          <a href="/home">Home</a>
         </li>
         <li>
-          <a href="train.html">Trains</a>
+          <a href="/trains">Trains</a>
         </li>
         <li>
-          <a href="station.html">Stations</a>
+          <a href="/stations">Stations</a>
         </li>
         <li>
-          <a href="route.html">Routes</a>
+          <a href="/routes">Routes</a>
         </li>
+        
         <div class="menu">
           <div class="l1"></div>
           <div class="l2"></div>
