--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -3,4 +3,10 @@
 </div>
 <div class="content">
   <h2 class="text">Welcome! This website will allow you to track routes, view stations, and see trains!</h2>
+  </br>
+  <h3>Trains: Lists all of the Trains. User can add or update trains.</h3>
+  </br>
+  <h3>Stations: Lists all of the trains. User can add a station. They can also filter the station by their states.</h3>
+  </br>
+  <h3>Routes: Lists the routesthrustatiosn intersection table. Shows each Routes and its corresponding Stations below in order.</h3>
 </div>
