--- a/public/style_old.css
+++ b/public/style_old.css
@@ -4,15 +4,23 @@
   padding: 0px;
 }
 .header {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-  /* background-color: red; */
+  font-family: 'Quicksand', sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  min-height: 10vh;
+  background-color: #5f3f54;
   cursor: pointer;
 }
 
+.title {
+ font-weight: bold;
+ font-size: 30px;
+ text-transform: uppercase;
+ letter-spacing: 4px;
+}
+
+/*Header in main*/
 .title-header {
   display: flex;
   font-weight: bold;
@@ -22,7 +30,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-color: rgb(243, 180, 62);
+  background-color: #5f3f54;
   height: 8vh;
   width: 100%;
   border: 1px solid black;
@@ -32,30 +40,18 @@
   flex: 8;
 }
 
-.buttons {
+.addbutton {
   flex: 2;
+  width: 20%;
   height: 8vh;
-  /* background-color: #3d2936; */
+  background-color: #3d2936;
   color: white;
-  /* font-size: 15px; */
-  /* border: 1px solid black; */
-  position: absolute;
-  right: 0px;
-  bottom: 0px;
+  font-size: 15px;
+  text-transform: uppercase;
+  border: 1px solid black;
 }
 
-.buttons .butt{
-  background-color:rgb(56, 80, 100); /* Blue background color */
-  width: 150px;
-  height: 25px;
-  border-radius: 50px; /* Curve of border corners */
-  text-transform: uppercase; /* Make letters uppercase */
-  color: white; /* Text color */
-}
-
-
-
-.buttons :hover {
+.addbutton:hover {
   color: black;
 }
 
@@ -65,63 +61,32 @@
   width: 40%;
   font-size: 15px;
   color: white;
-  float: right;
-
 }
 
-
-body {
-margin: 0;
-font-family: Arial, Helvetica, sans-serif;
+.nav-elements a {
+   color: white;
+   text-decoration: none;
+   letter-spacing: 3px;
+   text-align: center;
 }
 
-.topnav {
-overflow: hidden;
-background-color: #333;
+.nav-elements li {
+  list-style: none;
 }
 
-.topnav a {
-float: left;
-color: #f2f2f2;
-text-align: center;
-padding: 14px 22px;
-text-decoration: none;
-font-size: 17px;
+.nav-elements li a {
+  transition: all 0.3s ease 0s;
 }
 
-.topnav a:hover {
-background-color: #ddd;
-color: black;
-}
-
-.topnav a.active {
-background-color: rgb(56, 80, 100);
-color: white;
-}
-
-.topnav-right {
-padding-top: 5px;
-padding-right: 20px;
-margin-right: 20px;
-float: right;
-}
-
-.topnav-right a:hover {
-  color:orange;
+/* Text becomes colored after hovering over nav items */
+.nav-elements li a:hover {
+  color: #0088a9;
 }
 
 /* Dimensions for search in stations */
 #search-container {
-  /* flex: 1;
-  background-color: white; */
-
-  float: right;
-  padding: 0px;
-  margin-left: -380px;
-  border: none;
-  margin-top: 0px;
-  margin-right: 16px;
-  font-size: 17px;
+  flex: 1;
+  background-color: #5f3f54;
 }
 
 /* Search input */
@@ -133,7 +98,6 @@ float: right;
 
 /* Three lines on top right, can add mobile functionality later */
 .menu div {
-    padding: 10px;
     width: 25px;
     height: 3px;
     margin: 5px;
@@ -143,7 +107,7 @@ float: right;
 /* Home page about me, information */
 .content {
   display: flex;
-  background-color: white;
+  background-color: #326050;
   flex-flow: column;
   height: 100vh;
 }
@@ -154,72 +118,35 @@ float: right;
   font-size: 65px;
 }
 
-/* Float four columns side by side */
-.col {
-  float: left;
-  width: 300px;
-  padding: 0 10px;
-}
-
-/* Remove extra left and right margins, due to padding in columns */
-.row {
-  margin: 0 -5px;
-}
-
 /* Container for all the trains and stations cards*/
 #card-container {
-  /* flex: 5 40%;
+  flex: 5 40%;
   display: flex;
   flex-wrap: wrap;
   padding: 10px;
-  width: 60%;
+  width: 100%;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  padding-bottom: 10px; */
-  background-color: rgb(214, 214, 211);
-    /* height:380px; */
-    padding: 50px;
-    margin: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    
-  
-}
-
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Style the counter cards */
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
-  padding: 16px;
-  margin-top: 10px;
-  text-align: center;
-  background-color: #f1f1f1;
-}
-
-@media screen and (max-width: 600px) {
-  .col {
-    width: 100%;
-    display: block;
-    margin-bottom: 20px;
-  }
+  padding-bottom: 10px;
 }
 
 /* For trains and stations cards, will do specific ones later for styling  */
-
+.card {
+  flex: 1 30%;
+  border: 2px solid black;
+  padding: 10px;
+  text-align: center;
+  margin: 6px;
+  flex-direction: row;
+}
 
 /* Specific card for routesthrustations */
 .route-card {
   flex-direction: column;
   display: flex;
   flex: 1;
-  width: 100px;
+  width: 100%;
   border: 1px solid #26453e;
   padding: 5px;
   text-align: center;
@@ -233,18 +160,6 @@ float: right;
   text-transform: uppercase;
   font-weight: bold;
   text-align: center;
-}
-
-.close {
-  cursor: pointer;
-  position: relative;
-  transform: translate(-1%, -45%);
-  padding: 45px 245px;
-
-  /* top: 50%;
-  right: 0%;
-  padding: 12px 16px;
-  transform: translate(0%, -50%); */
 }
 
 /* Station name text in routesthrustations */
@@ -287,17 +202,6 @@ float: right;
   padding: 5px;
 }
 
-.update {
-  width: 100%;
-  height: auto;
-  display: none;
-  flex-grow: column;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  border: 2px black solid;
-  padding: 5px;
-}
-
 /* Header of insertion */
 .middle {
   font-weight: bold;
@@ -310,14 +214,6 @@ float: right;
 
 /*One input field*/
 .input-box {
-  margin-top: 5px;
-  padding-left: 5px;
-  flex: 1 20px;
-  min-width: 100%;
-}
-
-/*One input field*/
-.update-box {
   margin-top: 5px;
   padding-left: 5px;
   flex: 1 20px;
