--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,40 +1,24 @@
 <!DOCTYPE html>
 <html>
+
+
   <head>
     <meta charset="utf-8">
     <title>AnyTrak</title>
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/style.css">
-    <script src="/index.js"></script>
+    <link rel="stylesheet" href="style.css">
   </head>
+
   <body>
-    <nav class="header">
+    <div class="topnav">
+      <a class="active" style = "font-size: 25px;">AnyTrak</a>
 
-      <div class="title">
-        <h3>AnyTrak</h3>
+      <div class="topnav-right">
+        <a href="/home">Home</a>
+        <a href="/trains">Trains</a>
+        <a href="/stations">Stations</a>
+        <a href="/routes">Routes</a>
       </div>
-      <ul class="nav-elements">
-        <li>
-          <a href="/home">Home</a>
-        </li>
-        <li>
-          <a href="/trains">Trains</a>
-        </li>
-        <li>
-          <a href="/stations">Stations</a>
-        </li>
-        <li>
-          <a href="/routes">Routes</a>
-        </li>
-        
-        <div class="menu">
-          <div class="l1"></div>
-          <div class="l2"></div>
-          <div class="l3"></div>
-        </div>
-
-      </ul>
-    </nav>
+    </div>
     {{{body}}}
   </body>
-</html>
