fixed a ton of UI issues

--- a/public/style.css
+++ b/public/style.css
@@ -217,22 +217,16 @@ float: right;
 /* Specific card for routesthrustations */
 .route-card {
   flex-direction: column;
-  display: flex;
-  flex: 1;
-  width: 100px;
-  border: 1px solid #26453e;
-  padding: 5px;
-  text-align: center;
-  margin: 5px;
+  text-align: left;
+  margin-top: 5px;
 }
 
 /* Route Number text */
 .route-number {
-  font-size: 26px;
-  flex: 4 40%;
-  text-transform: uppercase;
-  font-weight: bold;
-  text-align: center;
+  color: white;
+  /* padding: 10px; */
+  padding: 10px;
+  background-color: rgb(5, 0, 0);
 }
 
 .close {
@@ -250,10 +244,10 @@ float: right;
 /* Station name text in routesthrustations */
 .stationname {
   flex: 3 30%;
-  font-size: 20px;
-  text-transform: uppercase;
-  font-weight: bold;
-  text-align: center;
+  font-size: 25px;
+  /* text-transform: uppercase; */
+  /* font-weight: bold; */
+  text-align: left;
 }
 
 /*Sets flexbox size for stations name for intersection table page */
