--- a/views/stations.handlebars
+++ b/views/stations.handlebars
@@ -16,7 +16,7 @@
   {{#each data}}
   <div class="col">
     <section class="card">
-      <div class="station-number">
+      <div class="train-number">
         Station #{{this.stationID}}
       </div>
       <div class="station-name">
