--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,8 +7,9 @@
     <title>AnyTrak</title>
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-  </head>
+    <script src="/public/index.js"></script>
 
+  </head>
   <body>
     <div class="topnav">
       <a class="active" style = "font-size: 25px;">AnyTrak</a>
