--- a/views/routes.handlebars
+++ b/views/routes.handlebars
@@ -14,32 +14,30 @@
             <span class="close">x</span>
             <div class="route-number">
               Route #{{this.routeID}}
+              <div class="route-name">
+                Route: {{this.routename}}
+              </div>
+              <div class="train-number">
+                Train # on this route: {{this.trainID}}
+              </div>
             </div>
-            <div class="route-name">
-              Route: {{this.routename}}
-            </div>
-            <div class="train-number">
-              Train # on this route: {{this.trainID}}
-            </div>
+
 
 
             <div class="stationname">
               Stations:
             </div>
-            <div id="card-container" class="stationsize">
+            <div class="route-card">
 
             {{#each ../data2}}
-
               {{#if_eq ../routeID this.routeID}}
-              <div class="route-card noborder">
-                <h2>Current-Station #: {{this.stationID}}</h2>
-                <h1>Travel Time: {{this.travelduration}}</h1>
-                <h1>Miles Traveled: {{this.milestraveled}}</h1>
-              </div>
+                <text>Current-Station #: {{this.stationID}} </text><br>
+                <text>Travel Time: {{this.travelduration}}</text><br>
+                <text>Miles Traveled: {{this.milestraveled}}</text><br><br>
               {{/if_eq}}
             {{/each}}
-
             </div>
+
 
 
 
