--- a/views/stations.handlebars
+++ b/views/stations.handlebars
@@ -3,6 +3,7 @@
   <h4 class="title-name">Stations</h4>
       <div id="search-container">
         <input type="text" id="search-input" placeholder="Search by State...">
+        <button onlick="searchfunction()" class="button" id="button-search">Search</button>
       </div>
 
   <div class="buttons">
@@ -54,12 +55,12 @@
     <input type="text" id="station-address">
   </div>
   <div class="input-box">
-    <label>State</label>
-    <input type="text" id="station-state">
-  </div>
-  <div class="input-box">
     <label>City</label>
     <input type="text" id="station-city">
+  </div>
+  <div class="input-box">
+    <label>State</label>
+    <input type="text" id="station-state">
   </div>
   <div class="input-box">
     <label>Zipcode</label>
