--- a/layouts/main.handlebars
+++ b/layouts/main.handlebars
@@ -2,8 +2,12 @@
 <html>
 <head>
 	<title>Demo Page</title>
-</head>
+	<link rel='stylesheet' type='text/css' href='/public/style.css'>
 
+</head>
+{{#each jsscripts}}
+<script src="/static/{{this}}"></script>
+{{/each}}
 <body>
 	{{{body}}}
 </body>
