--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
-
-
   <head>
     <meta charset="utf-8">
     <title>AnyTrak</title>
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="index.js"></script>
+    {{#each jsscripts}}
+    <script src="{{this}}"></script>
+    {{/each}}
 
   </head>
   <body>
@@ -20,6 +21,8 @@
         <a href="/stations">Stations</a>
         <a href="/routes">Routes</a>
       </div>
+
     </div>
     {{{body}}}
   </body>
+</html>
