--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
   <head>
     <meta charset="utf-8">
     <title>AnyTrak</title>
-    <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+    {{!-- <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet"> --}}
     <link rel="stylesheet" href="style.css">
     <script src="index.js"></script>
-    {{#each jsscripts}}
-    <script src="{{this}}"></script>
-    {{/each}}
 
   </head>
   <body>
