--- a/views/stations.handlebars
+++ b/views/stations.handlebars
@@ -1,4 +1,5 @@
 
+<html>
 <div class="title-header">
   <h4 class="title-name">Stations</h4>
       {{!-- <div id="search-container" >
@@ -80,3 +81,4 @@
   </div>
   <button onclick="insertstation();" class="button" id="submit-station">Submit</button>
 </form>
+</html>
