--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <title>AnyTrak</title>
     {{!-- <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet"> --}}
-    <link rel="stylesheet" href="style.css">
-    <script src="index.js"></script>
+    {{!-- <link rel="stylesheet" href="style.css"> --}}
+    <link rel="stylesheet" type="text/css" href="/style.css">
+    <script src="/index.js"></script>
 
   </head>
   <body>
