--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
 
+<head>
+  <meta charset="utf-8">
+  <title>AnyTrak</title>
+  <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+  {{!-- <link rel="stylesheet" href="style.css"> --}}
+  <link rel="stylesheet" type="text/css" href="/style.css">
+  <script src="/index.js"></script>
 
-  <head>
-    <meta charset="utf-8">
-    <title>AnyTrak</title>
-    <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <script src="index.js"></script>
+</head>
 
-  </head>
-  <body>
-    <div class="topnav">
-      <a class="active" style = "font-size: 25px;">AnyTrak</a>
+<body>
+  <div class="topnav">
+    <a class="active" style="font-size: 25px;">AnyTrak</a>
 
-      <div class="topnav-right">
-        <a href="/home">Home</a>
-        <a href="/trains">Trains</a>
-        <a href="/stations">Stations</a>
-        <a href="/routes">Routes</a>
-      </div>
+    <div class="topnav-right">
+      <a href="/home">Home</a>
+      <a href="/trains">Trains</a>
+      <a href="/stations">Stations</a>
+      <a href="/routes">Routes</a>
     </div>
-    {{{body}}}
-  </body>
+
+  </div>
+  {{{body}}}
+</body>
+
+</html>
