--- a/views/stations.handlebars
+++ b/views/stations.handlebars
@@ -1,43 +1,55 @@
-
+<html>
 <div class="title-header">
   <h4 class="title-name">Stations</h4>
-      <div id="search-container">
+  {{!-- <div id="search-container" >
         <input type="text" id="search-input" placeholder="Search by State...">
-        <button onlick="searchfunction()" class="button" id="button-search">Search</button>
-      </div>
+        <button type="button" onclick="searchfunction(); return false;" class = "search-butt"> Search </button>
+
+      </div> --}}
+  <form id='search-container' action='' method=''>
+    <!--- this form does not submit directly, the button handles all the interaction with backend -->
+    <label> Find Station </label>
+    <select id='station_filter' name="station">
+      {{#each data}}
+      <option value="{{stationID}}">{{state}}</option>
+      {{/each}}
+    </select><br>
+    <input type="button" value="Filter" onclick="searchfunction(); return false;">
+  </form>
 
   <div class="buttons">
-    <button onclick="showmodal()" class="butt">Add Stations</button>
+    <button onclick="showmodal();" class="butt">Add Stations</button>
+    {{!-- <button onclick="showsearch(); return false;" class="butt">Search Stations</button> --}}
   </div>
 </div>
 
 <main id="card-container">
-  <div id ="row">
+  <div id="row">
 
-  {{#each data}}
-  <div class="col">
-    <section class="card">
-      <div class="train-number">
-        Station #{{this.stationID}}
-      </div>
-      <div class="station-name">
-        Name: {{this.stationname}}
-      </div>
-      <div class="station-address">
-        Address: {{this.address}}
-      </div>
-      <div class="station-state">
-        State: {{this.state}}
-      </div>
-      <div class="station-city">
-        City: {{this.city}}
-      </div>
-      <div class="station-zipcode">
-        Zipcode: {{this.zipcode}}
-      </div>
-    </section>
-  </div>
-  {{/each}}
+    {{#each data}}
+    <div class="col">
+      <section class="card">
+        <div class="train-number">
+          Station #{{this.stationID}}
+        </div>
+        <div class="station-name">
+          Name: {{this.stationname}}
+        </div>
+        <div class="station-address">
+          Address: {{this.address}}
+        </div>
+        <div class="station-state">
+          State: {{this.state}}
+        </div>
+        <div class="station-city">
+          City: {{this.city}}
+        </div>
+        <div class="station-zipcode">
+          Zipcode: {{this.zipcode}}
+        </div>
+      </section>
+    </div>
+    {{/each}}
 
   </div>
 </main>
@@ -68,3 +80,5 @@
   </div>
   <button onclick="insertstation();" class="button" id="submit-station">Submit</button>
 </form>
+
+</html>
