--- a/views/trains.handlebars
+++ b/views/trains.handlebars
@@ -27,7 +27,7 @@
         {{/each}}
 
         <div class="train-conductor">
-          Conductor: {{this.conductorfirstname}} + {{this.conductorlastname}}
+          Conductor: {{this.conductorfirstname}} {{this.conductorlastname}}
         </div>
         <div class="train-model">
           Model: {{this.model}}
