--- a/public/style.css
+++ b/public/style.css
@@ -40,7 +40,7 @@
   /* font-size: 15px; */
   /* border: 1px solid black; */
   position: absolute;
-  right: 0px;
+  right: 10px;
   bottom: 0px;
 }
 
@@ -54,9 +54,22 @@
 }
 
 
-
 .buttons :hover {
   color: black;
+}
+
+#search-container:hover {
+ cursor: pointer;
+}
+
+.dropbtn {
+  background-color:rgb(56, 80, 100); /* Blue background color */
+  width: 100px;
+  height: 25px;
+  border-radius: 50px; /* Curve of border corners */
+  text-transform: uppercase; /* Make letters uppercase */
+  color: white; /* Text color */
+  margin-right: 10px;
 }
 
 .nav-elements {
@@ -112,9 +125,6 @@ float: right;
 
 /* Dimensions for search in stations */
 #search-container {
-  /* flex: 1;
-  background-color: white; */
-
   float: right;
   padding: 0px;
   margin-left: -380px;
@@ -122,13 +132,6 @@ float: right;
   margin-top: 0px;
   margin-right: 16px;
   font-size: 17px;
-}
-
-/* Search input */
-#search-input {
-  border-radius: 10px;
-  background-color: lightgrey;
-  font-size: 30px;
 }
 
 /* Three lines on top right, can add mobile functionality later */
@@ -154,38 +157,10 @@ float: right;
   font-size: 65px;
 }
 
-/* Float four columns side by side */
-.col {
-  float: left;
-  width: 300px;
-  padding: 0 10px;
-}
-
+/*---------------------------*/
 /* Remove extra left and right margins, due to padding in columns */
 .row {
   margin: 0 -5px;
-}
-
-/* Container for all the trains and stations cards*/
-#card-container {
-  /* flex: 5 40%;
-  display: flex;
-  flex-wrap: wrap;
-  padding: 10px;
-  width: 60%;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  padding-bottom: 10px; */
-  background-color: rgb(214, 214, 211);
-    /* height:380px; */
-    padding: 50px;
-    margin: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-
 }
 
 .row:after {
@@ -198,21 +173,36 @@ float: right;
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
   padding: 16px;
-  margin-top: 10px;
   text-align: center;
   background-color: #f1f1f1;
+  
 }
 
-@media screen and (max-width: 600px) {
+#card-container {
+  background-color: rgb(214, 214, 211);
+  width: 100%;
+  padding: 50px;
+  /* margin: 0; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  display: table; /* Make the container element behave like a table */
+
+}
+
+@media only screen and (max-width: 600px) {
   .col {
-    width: 100%;
     display: block;
-    margin-bottom: 20px;
+    width: 100%;
   }
 }
 
-/* For trains and stations cards, will do specific ones later for styling  */
-
+.col {
+    width: 300px;
+    padding: 16px;
+    float: left;
+    display: table-cell; /* Make elements inside the container behave like table cells */
+}
 
 /* Specific card for routesthrustations */
 .route-card {
@@ -232,13 +222,26 @@ float: right;
 .close {
   cursor: pointer;
   position: relative;
-  transform: translate(-1%, -45%);
-  /*padding: 45px 245px;*/
+  transform: translate(-1%, -15%);
+  radius: 45%;
+  background-color: lightcoral;
+  width: 20px;
+  height: 20px;
+  border-radius: 50px; /* Curve of border corners */
+  color: white; /* Text color */
+}
 
-  /* top: 50%;
-  right: 0%;
-  padding: 12px 16px;
-  transform: translate(0%, -50%); */
+.close_card {
+  cursor: pointer;
+  position: relative;
+  transform: translate(440%, -25%);
+  radius: 45%;
+  background-color: lightcoral;
+  width: 25px;
+  height: 25px;
+  border-radius: 50px; /* Curve of border corners */
+  text-transform: uppercase; /* Make letters uppercase */
+  color: white; /* Text color */
 }
 
 /* Station name text in routesthrustations */
