--- a/views/stations.handlebars
+++ b/views/stations.handlebars
@@ -1,21 +1,17 @@
 <html>
 <div class="title-header">
   <h4 class="title-name">Stations</h4>
-  {{!-- <div id="search-container" >
-        <input type="text" id="search-input" placeholder="Search by State...">
-        <button type="button" onclick="searchfunction(); return false;" class = "search-butt"> Search </button>
 
-      </div> --}}
-  <form id='search-container' action='' method=''>
+  <div id='search-container' action='' method=''>
     <!--- this form does not submit directly, the button handles all the interaction with backend -->
-    <label> Find Station </label>
     <select id='station_filter' name="station">
       {{#each data_dropdown}}
       <option value="{{stationID}}">{{state}}</option>
       {{/each}}
     </select><br>
-    <input type="button" value="Filter" onclick="searchfunction(); return false;">
-  </form>
+  </div>
+  <button type="button" value="Filter" onclick="searchfunction(); return false;" class="dropbtn"> Search </button>
+
 
   <div class="buttons">
     <button onclick="showmodal();" class="butt">Add Stations</button>
@@ -29,7 +25,7 @@
     {{#each data}}
     <div class="col">
       <section class="card">
-        <button value={{this.stationID}} class="close" onclick="deletestations(this)">x</button>
+        <button value={{this.stationID}} class="close_card" onclick="deletestations(this)">x</button>
         <div class="train-number">
           Station #{{this.stationID}}
         </div>
