--- a/views/routes.handlebars
+++ b/views/routes.handlebars
@@ -31,10 +31,12 @@
 
             {{#each ../route_details}}
               {{#if_eq ../routeID this.routeID}}
-                <button value={{this.routesthrustationsID}} class="close" onclick="deleteroutesthrustations(this)">x</button>
-                <text>Current-Station #: {{this.stationID}} </text><br>
-                <text>Travel Time: {{this.travelduration}}</text><br>
-                <text>Miles Traveled: {{this.milestraveled}}</text><br><br>
+                <div class="route-sub-card">
+                  <button value={{this.routesthrustationsID}} class="close" onclick="deleteroutesthrustations(this)">x</button>
+                  <text>Current-Station #: {{this.stationID}} </text><br>
+                  <text>Travel Time: {{this.travelduration}}</text><br>
+                  <text>Miles Traveled: {{this.milestraveled}}</text><br><br>
+              </div>
               {{/if_eq}}
             {{/each}}
             </div>
